# performance_review

./: .gitignore  ARCHITECTURE.md  README.md  perf.yaml  pyproject.toml  review_template.md  rubric.yml
perf_review/: __init__.py  __main__.py  models.py
perf_review/cli/: __init__.py  app.py
perf_review/connectors/: __init__.py  base.py  confluence.py  git_local.py  github.py  http.py  jira.py
perf_review/graph/: __init__.py  builder.py
perf_review/llm/: provider.py
perf_review/normalize/: __init__.py
perf_review/review/: __init__.py  engine.py
perf_review/store/: db.py
perf_review/utils/: config.py  datafile.py  secrets.py  text.py  time.py
tests/: test_perf_review.py
