[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perf-review"
version = "0.1.0"
description = "Local-first CLI for engineering performance review preparation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
perf = "perf_review.cli.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["perf_review*"]

